Arrays.asList instead of List.of